Modify adjustment methods, add padding to bottom of list in UI

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:divider="?android:attr/dividerVertical"
-            android:showDividers="middle" >
+            android:showDividers="middle"
+            android:paddingBottom="20dp" >
 
             <Button
                 android:id="@+id/MaxPowerButton"
