Improve TonePlay tone generation and settings UI

--- a/res/layout/dialog_tone_settings.xml
+++ b/res/layout/dialog_tone_settings.xml
@@ -41,11 +41,16 @@
 
         <EditText
             android:id="@+id/editFreq"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="number" />
     </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/freqSeekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
