--- a/res/layout/component_list_item.xml
+++ b/res/layout/component_list_item.xml
@@ -35,4 +35,12 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/ComponentListSettingsButton"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_action_settings"
+        android:text="Settings" />
+
 </LinearLayout>
