Layout fixes and tweaks

--- a/res/layout/component_list_item.xml
+++ b/res/layout/component_list_item.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp" >
+    android:paddingBottom="8dp"
+    android:paddingTop="8dp" >
     
     <Switch
         android:id="@+id/ComponentListItemSwitch"
@@ -15,7 +15,8 @@
     <LinearLayout
         android:id="@+id/ComponentListItemAdjustment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp" >
 
         <SeekBar
             android:id="@+id/ComponentListItemAdjustmentSeekBar"
@@ -40,6 +41,7 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:drawableLeft="@drawable/ic_action_settings"
         android:text="Settings" />
 
