--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,11 +8,7 @@
     <ScrollView
         android:id="@+id/MainScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:id="@+id/MainLinearLayout"
@@ -21,13 +17,17 @@
             android:orientation="vertical"
             android:divider="?android:attr/dividerVertical"
             android:showDividers="middle"
-            android:paddingBottom="20dp" >
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin" >
 
             <Button
                 android:id="@+id/TurnAllOffButton"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:onClick="turnAllOff"
                 android:text="Turn all off" />
 
