--- a/res/layout/dialog_tone_settings.xml
+++ b/res/layout/dialog_tone_settings.xml
@@ -1,56 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <RadioGroup
-        android:id="@+id/waveformRadioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-        <RadioButton
-            android:id="@+id/waveformWhiteNoise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="White noise" />
-
-        <RadioButton
-            android:id="@+id/waveformSineWave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sine wave" />
-
-        <RadioButton
-            android:id="@+id/waveformSquareWave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Square wave" />
-    </RadioGroup>
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/textView1"
+        <RadioGroup
+            android:id="@+id/waveformRadioGroup"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Frequency (Hz): " />
+            android:layout_height="wrap_content" >
 
-        <EditText
-            android:id="@+id/editFreq"
-            android:layout_width="0dp"
+            <RadioButton
+                android:id="@+id/waveformWhiteNoise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="White noise" />
+
+            <RadioButton
+                android:id="@+id/waveformSineWave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Sine wave" />
+
+            <RadioButton
+                android:id="@+id/waveformSquareWave"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Square wave" />
+        </RadioGroup>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="number" />
+            android:layout_marginTop="16dp" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="Frequency (Hz): " />
+
+            <EditText
+                android:id="@+id/editFreq"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <SeekBar
+            android:id="@+id/freqSeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
     </LinearLayout>
 
-    <SeekBar
-        android:id="@+id/freqSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+</FrameLayout>
